Added home page
navigation bar babyy
the timer part is wonky

--- a/index.html
+++ b/index.html
@@ -1,17 +1,42 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 
 <head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width initial-scale=1.0">
+    <title>Studyseas</title>
 
-    <title>Pomoice</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Concert+One&display=swap');
+        </style>
 </head>
 <body>
-<a href="timer.html">
+    <header>
+        <h1 href="#" class="logo">Studyseas</h1>
 
-    <button style="background-color: royalblue;border-radius:5px"> Pomodoro</button>
-</a>
+        <nav>
+            <a href="index.html" class="active">Home</a>
+            <a href="timer.html">Timer</a>
+            <a href="#">Notes</a>
+            <a href="#">Music</a>
+            <a href="#">Games</a>
+            <a href="#">Contact</a>
+        </nav>
+    </header>
+    <section class="Home">
+        <div class="home-img">
+         <img src="Seabackground.png ">
+        </div>
+
+      <div class="home-content">
+         <h1>Studyseas</h1>
+         <p>An all in one website for your productivity</p>
+     </div>
+     </section>
+
    
 </body>
 </html>
+
