--- a/timer.html
+++ b/timer.html
@@ -5,8 +5,25 @@
         <meta name="viewport" content ="width=divice-width, initial-scale=1.0">
         <title>Study timer</title>
         <link rel="stylesheet" href="timer.css">
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Concert+One&display=swap');
+            </style>
+            <header>
+                <h1 href="#" class="logo">Studyseas</h1>
+            
+                <nav>
+                    <a href="index.html" class="active">Home</a>
+                    <a href="timer.html">Timer</a>
+                    <a href="#">Notes</a>
+                    <a href="#">Music</a>
+                    <a href="#">Games</a>
+                    <a href="#">Contact</a>
+                </nav>
+            </header>
     </head>
     <body>
+        <span style= "vertical-align:middle">
+        <div id="studytimer">
         <h1 id="myH1">Study timer</h1>
  <div id="container">
     <div id="display">
@@ -16,9 +33,14 @@
         <button id="startBtn" onclick="start()">start</button>
         <button id="stopBtn" onclick="stop()">stop</button>
         <button id="resetBtn" onclick="reset()">reset</button>
+    </p>
     </div>
  </div>
+ <div> 
+</div>
+</div>
 
  <script src="timer.js"></script>
+ </span>
     </body>
 </html>
