--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav>
             <a href="index.html" class="active">Home</a>
             <a href="timer.html">Timer</a>
-            <a href="#">Notes</a>
+            <a href="Note.html">Notes</a>
             <a href="#">Music</a>
             <a href="#">Games</a>
             <a href="#">Contact</a>
